ingress-nginx-testing/deplloyments/kubernetes/hello/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: dev
spec:
  controller: k8s.io/ingress-nginx
