ingress-nginx-testing/deplloyments/kubernetes/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: dev
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hello-world
